--- a/angularjs/public/index.html
+++ b/angularjs/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="assets/css/core.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body>
-
+<p>&nbsp;</p>
+<div class="container">
+    <input type="checkbox" icheck>
+</div>
+<script src="assets/js/core.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
